--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>FlowSound</title>
   <!-- <link href="css/normalize.css" rel="stylesheet" /> -->
-  <link href="style.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
   <div class="container">
@@ -51,10 +51,10 @@
     </footer>
   </div>
   <!-- end container -->
-  <script src="../p5.min.js"></script>
-  <script src="../addons/p5.sound.js"></script>
-  <script src="sketch.js"></script>
+  <script src="p5.min.js"></script>
+  <script src="addons/p5.sound.min.js"></script>
+  <script src="java/sketch.js"></script>
   <!-- <script src="sketchcopy.js"></script> -->
-  <script src="main.js"></script>
+  <script src="java/main.js"></script>
   </body>
 </html>
