--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   <!-- end container -->
   <script src="p5.min.js"></script>
   <script src="addons/p5.sound.min.js"></script>
-  <script src="java/sketch.js"></script>
-  <!-- <script src="sketchcopy.js"></script> -->
+  <!-- <script src="java/sketch.js"></script> -->
+  <script src="java/sketchcopy.js"></script>
   <script src="java/main.js"></script>
   </body>
 </html>
