--- a/assets/instructions.html
+++ b/assets/instructions.html
@@ -25,10 +25,27 @@
             >
             to create a calming and personalized experience for the user.
           </p>
+          <p>Wear headphones for the best and most private experience!</p>
+          <p>
+            Best technic to follow is breathe in as the graphic
+            expands, exhale as it shrinks.
+          </p>
+          <h4>Graphic Toggles</h4>
+          <p>
+            The main screen features moving visuals that help relax users as
+            they watch. The rythmic repetitiveness of the graphic helps calm the
+            mind. Play around with the toggles at the bottom of the graphic to make
+            more appear/disappear.       
+          </p>
+          <h4>Audio Toggles</h4>
+         <p> The right drop down menu features four different audios available
+            for toggling. Each toggle changes an aspect of the audio for a more
+            personalized experience.Try layering different sounds to find what
+            works for you.</p>
         </div>
       </main>
       <aside id="aside1">
-        <section>
+        <!-- <section>
           <h3>Graphic Screen</h3>
           <img
             src="images/flowSound.gif"
@@ -44,10 +61,12 @@
             Play around with the toggles at the bottom of the graphic to make
             more appear/disappear.
           </p>
-        </section>
+        </section> -->
       </aside>
       <aside id="aside2">
-        <section>
+        <section><img src="images/full.png" alt="exercise 1 visual graphic" /></section>
+
+        <!-- <section>
           <h3>Audio Toggles</h3>
           <img src="images/toggle.png" alt="exercise 1 visual graphic" />
           <p>
@@ -57,7 +76,7 @@
           </p>
           <p>Try layering different sounds to find what
             works for you.</p>
-        </section>
+        </section> -->
       </aside>
       <aside id="asmr">
         <section>
@@ -90,13 +109,9 @@
       </aside>
       <aside id="tips-a">
         <section id="tips">
-          <h5>Tips:</h5>
+          <h5>Did you know?</h5>
           <p>
-            At regular graphic and audio speed, breathe in as the graphic
-            expands, exhale as it shrinks.
-          </p>
-          <p>
-            Try other breathing technics like 4-7-8. This involves breathing in
+            Other breathing technics like 4-7-8 help calm the brain. This involves breathing in
             for 4 seconds, holding the breath for 7 seconds, and exhaling for 8
             seconds.
           </p>
