--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
           >
           <section id="audio-player-container">
             <h2>Toggle Audios</h2>
+            <div id="audio-area">
             
-            <div id="audio-area"></div>
+            </div>
           </section>
         </div>
         <button class="openbtn" onclick="openNav()">&#9776;</button>
