--- a/assets/instructions.html
+++ b/assets/instructions.html
@@ -13,23 +13,32 @@
       <header>
         <h1>What is FlowSound?</h1>
       </header>
+      <nav title="Navigation Bar">
+        <ul>
+          <li class="nav-bar" id="tut">
+            <a href="instructions.html">How-To</a>
+          </li>
+          <li class="nav-bar" id="asmr">
+            <a href="asmr.html">What is ASMR?</a>
+          </li>
+        </ul>
+      </nav>
       <main id="exercise-area">
         <div>
-          <h2>FlowSound's Purpose</h2>
-          <p>
-            FlowSound is for stressed individuals looking for a relaxing
-            auditory and visual experience without leaving their computers. This
-            web application introduces
-            <span style="font-weight: bold"
-              >ASMR audio and moving graphic visuals</span
-            >
-            to create a calming and personalized experience for the user.
-          </p>
           <p>Wear headphones for the best and most private experience!</p>
           <p>
             Best technic to follow is breathe in as the graphic
             expands, exhale as it shrinks.
           </p>
+        </div>
+      </main>
+      <aside id="aside1">
+        <section>
+          <h3>Graphic Screen</h3>
+          <img
+            src="images/graphic.gif"
+            alt="gif on how to toggle graphic"
+          />
           <h4>Graphic Toggles</h4>
           <p>
             The main screen features moving visuals that help relax users as
@@ -37,74 +46,16 @@
             mind. Play around with the toggles at the bottom of the graphic to make
             more appear/disappear.       
           </p>
+        </section>
+      </aside>
+      <aside id="aside2">
+        <section><img src="images/audio-demo.gif" alt="gif on how to use audio toggles" /></section>
+        <section>
           <h4>Audio Toggles</h4>
          <p> The right drop down menu features four different audios available
             for toggling. Each toggle changes an aspect of the audio for a more
             personalized experience.Try layering different sounds to find what
             works for you.</p>
-        </div>
-      </main>
-      <aside id="aside1">
-        <!-- <section>
-          <h3>Graphic Screen</h3>
-          <img
-            src="images/flowSound.gif"
-            alt="exercise visual graphic gif"
-            id="graphic-gif"
-          />
-          <p>
-            The main screen features moving visuals that help relax users as
-            they watch. The rythmic repetitiveness of the graphic helps calm the
-            mind.
-          </p>
-          <p>
-            Play around with the toggles at the bottom of the graphic to make
-            more appear/disappear.
-          </p>
-        </section> -->
-      </aside>
-      <aside id="aside2">
-        <section><img src="images/full.png" alt="exercise 1 visual graphic" /></section>
-
-        <!-- <section>
-          <h3>Audio Toggles</h3>
-          <img src="images/toggle.png" alt="exercise 1 visual graphic" />
-          <p>
-            The right drop down menu features four different audios available
-            for toggling. Each toggle changes an aspect of the audio for a more
-            personalized experience.
-          </p>
-          <p>Try layering different sounds to find what
-            works for you.</p>
-        </section> -->
-      </aside>
-      <aside id="asmr">
-        <section>
-          <h2>What is ASMR?</h2>
-          <p>
-            ASMR is an acronym for autonomous sensory meridian response. Marriam
-            Webster defines ASMR as "a
-            <span style="font-weight: bold">pleasant tingling sensation</span>
-            that originates on the back of the scalp and often spreads to the
-            neck and upper spine, that occurs in some people in response to a
-            stimulus (such as a particular kind of sound or movement), and that
-            tends to have
-            <span style="font-weight: bold">a calming effect</span>."
-          </p>
-          <p>
-            In recent years, ASMR has gained more traction among people with
-            different health problems like insomnia, anxiety, depression and
-            PTSD. Videos are the most popular form of consuming ASMR and are
-            available on a wide variety of platforms like youtube, instagram,
-            tiktok, etc. ASMR videos usually focus on using different audio
-            &#34;triggers&#34; which cause user's to experience calming tingling
-            effects.
-          </p>
-          <a
-            href="https://www.youtube.com/watch?v=Kb27NHO_ubg"
-            target="”_blank”"
-            ><h4>Learn more about ASMR</h4></a
-          >
         </section>
       </aside>
       <aside id="tips-a">
@@ -121,11 +72,6 @@
         <small>Designed by Yuliza Saucedo</small>
       </footer>
     </div>
-    <!-- end container -->
-    <!-- <script src="p5.min.js"></script>
-    <script src="addons/p5.sound.min.js"></script> -->
-    <!-- <script src="java/sketch.js"></script> -->
-    <!-- <script src="java/sketchcopy.js"></script> -->
-    <!-- <script src="../java/main.js"></script> -->
+  
   </body>
 </html>
