--- a/assets/asmr.html
+++ b/assets/asmr.html
@@ -13,7 +13,7 @@
       <header>
         <h1>What is FlowSound?</h1>
       </header>
-      <nav title="Navigation Bar">
+      <nav title="Navigation Bar" id="navbar">
         <ul>
           <li class="nav-bar" id="tut">
             <a href="instructions.html">How-To</a>
@@ -25,12 +25,12 @@
       </nav>
       <main id="exercise-area">
         <div>
-          <h2>FlowSound's Purpose</h2>
+          <h2 class="accent">FlowSound's Purpose</h2>
           <p>
             FlowSound is for stressed individuals looking for a relaxing
             auditory and visual experience without leaving their computers. This
             web application introduces
-            <span style="font-weight: bold"
+            <span style="font-weight: bold" class="accent"
               >ASMR audio and moving graphic visuals</span
             >
             to create a calming and personalized experience for the user.
@@ -39,16 +39,16 @@
       </main>
       <aside id="asmr">
         <section>
-          <h2>What is ASMR?</h2>
+          <h2 class="accent">What is ASMR?</h2>
           <p>
             ASMR is an acronym for autonomous sensory meridian response. Marriam
             Webster defines ASMR as "a
-            <span style="font-weight: bold">pleasant tingling sensation</span>
+            <span style="font-weight: bold" class="accent">pleasant tingling sensation</span>
             that originates on the back of the scalp and often spreads to the
             neck and upper spine, that occurs in some people in response to a
             stimulus (such as a particular kind of sound or movement), and that
             tends to have
-            <span style="font-weight: bold">a calming effect</span>."
+            <span style="font-weight: bold" class="accent">a calming effect</span>."
           </p>
           <p>
             In recent years, ASMR has gained more traction among people with
@@ -59,10 +59,10 @@
             &#34;triggers&#34; which cause user's to experience calming tingling
             effects.
           </p>
-          <a
+          <a 
             href="https://www.youtube.com/watch?v=Kb27NHO_ubg"
-            target="”_blank”"
-            ><h4>Learn more about ASMR</h4></a
+            target="”_blank”" 
+            ><li class="asmrlinks">What is ASMR? video</li></a
           >
         </section>
     </aside>
