--- a/assets/instructions.html
+++ b/assets/instructions.html
@@ -13,7 +13,7 @@
       <header>
         <h1>What is FlowSound?</h1>
       </header>
-      <nav title="Navigation Bar">
+      <nav title="Navigation Bar" id="navbar">
         <ul>
           <li class="nav-bar" id="tut">
             <a href="instructions.html">How-To</a>
@@ -23,7 +23,7 @@
           </li>
         </ul>
       </nav>
-      <main id="exercise-area">
+      <!-- <main id="exercise-area">
         <div>
           <p>Wear headphones for the best and most private experience!</p>
           <p>
@@ -31,36 +31,35 @@
             expands, exhale as it shrinks.
           </p>
         </div>
-      </main>
+      </main> -->
       <aside id="aside1">
         <section>
-          <h3>Graphic Screen</h3>
+          <h3>Graphic Toggle</h3>
           <img
             src="images/graphic.gif"
             alt="gif on how to toggle graphic"
           />
-          <h4>Graphic Toggles</h4>
           <p>
             The main screen features moving visuals that help relax users as
             they watch. The rythmic repetitiveness of the graphic helps calm the
-            mind. Play around with the toggles at the bottom of the graphic to make
+            mind.</p> <p>Play around with the toggles at the bottom of the graphic to make
             more appear/disappear.       
           </p>
         </section>
       </aside>
       <aside id="aside2">
-        <section><img src="images/audio-demo.gif" alt="gif on how to use audio toggles" /></section>
+        <h3>Audio Toggle</h3>
+        <img src="images/audio-demo.gif" alt="gif on how to use audio toggles" />
         <section>
-          <h4>Audio Toggles</h4>
          <p> The right drop down menu features four different audios available
             for toggling. Each toggle changes an aspect of the audio for a more
-            personalized experience.Try layering different sounds to find what
+            personalized experience.</p><p>Try layering different sounds to find what
             works for you.</p>
         </section>
       </aside>
       <aside id="tips-a">
         <section id="tips">
-          <h5>Did you know?</h5>
+          <h4>Did you know?</h4>
           <p>
             Other breathing technics like 4-7-8 help calm the brain. This involves breathing in
             for 4 seconds, holding the breath for 7 seconds, and exhaling for 8
@@ -68,6 +67,11 @@
           </p>
         </section>
       </aside>
+      <aside id="inst"><p class="accent">Wear headphones for the best and most private experience!</p>
+        <p class="accent">
+          Best technic to follow is breathe in as the graphic
+          expands, exhale as it shrinks.
+        </p></aside>
       <footer>
         <small>Designed by Yuliza Saucedo</small>
       </footer>
